fixed collapsing table

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -217,3 +217,8 @@ span.form-group {
   text-align: right;
   padding-right: 40px !important;
 }
+
+.productList{
+  width: 60% !important;
+  text-align: center;
+}
